--- a/src/index.html
+++ b/src/index.html
@@ -6,61 +6,113 @@
 		<meta name="viewport" content="width=device-width" />
 		<style>
 			table {
-				margin: 0 auto !improtant;
-			}
+				margin: 0 auto !improtant; }
 
-			@media screen and (max-width: 600px) {
+			@media screen and (max-width: 635px) {
 				.width-full {
-					width: 100% !important;
-				}
-				.email-title {
-					font-size: 48px !important;
-					line-height: 48px !important;
-				}
-				.email-slogan {
-					font-size: 18px !important;
-					line-height: 18px !important;
-				}
-				.email-ornamentation {
-					height: auto !important;
-					width: 100% !important;
-				}
-				.email-marginclr {
-					margin: 0 !important;
-				}
-			}
-
-			@media screen and (max-width: 1160px) {
-	        u + .gmail .width-full {
-	          width: 100% !important; }
-	        u + .gmail .col-one-stack {
-	          padding: 0 !important; }
-	        u + .gmail .col-two-stack {
-	          padding: 20px 0 0 0 !important; }
-	        u + .gmail .email-stars {
-	          padding: 5px 0 !important; }
-	        u + .gmail .email-title {
-	     	  font-size: 52px !important;
-	          line-height: 52px !important;
-	          padding: 2px 0 3px !important; }
-	        u + .gmail .email-slogan {
-	          font-size: 18px !important;
-	          line-height: 18px ;
-	          padding: 5px 0 !important; }
-	        u + .gmail .email-date-day {
-	          padding-top: 10px !important; }
-	        u + .gmail .email-date-month {
-	          padding-bottom: 10px !important; }
-	        u + .gmail .email-ornamentation {
-	          height: auto !important;
-	          width: 100% !important; }
-	        u + .gmail .padding-top-10 {
-	          padding-top: 10px !important; }
-	        u + .gmail .stack-column-two {
-	            padding-top: 20px !important; } 
-	        }
-
+					width: 100% !important; }
+				.margin-left-clr {
+					margin-left: 0 !important; }				}
+				.col-one-stack {
+		          padding: 0 !important; }
+		        .col-two-stack {
+		          padding: 20px 0 0 0 !important; }
+		        .email-stars {
+		          padding: 5px 0 !important; }
+		        .email-title {
+		          padding: 2px 0 3px !important; }
+		        .email-slogan {
+		          padding: 5px 0 !important; }
+		        .email-date-day {
+		          padding-top: 10px !important; }
+		        .email-date-month {
+		          padding-bottom: 10px !important; }
+		        .email-ornamentation {
+		          height: auto !important;
+		          width: 100% !important; }
+		        .padding-top-10 {
+		          padding-top: 10px !important; }
+		        .stack-column-two {
+		          padding-top: 20px !important;} }
+		      @media screen and (max-width: 320px) {
+		        .email-title {
+		          font-size: 34px !important;}
+		        .email-slogan {
+		          font-size: 12px !important; }
+		        .email-date-day {
+		          font-size: 32px !important; }
+		        .email-date-month {
+		          font-size: 20px !important; }
+		        .email-tickets-title {
+		          font-size: 18px !important; }
+		        .email-tickets-border {
+		          width: 200px !important; }
+		        .email-tickets-category {
+		          font-size: 21px !important; }
+		        .email-tickets-price {
+		          font-size: 24px !important; } }
+		       @media screen and (min-width: 321px) and (max-width: 375px) {
+		        .email-title {
+		          font-size: 40px !important; }
+		        .email-slogan {
+		          font-size: 14px !important; } }
+		       @media screen and (min-width: 376px) and (max-width: 480px) {
+		        .email-title {
+		          font-size: 46px !important; }
+		        .email-slogan {
+		          font-size: 16px !important; } }
+		       @media screen and (min-width: 481px) and (max-width: 599px) {
+		        .email-title {
+		          font-size: 54px !important; }
+		        .email-slogan {
+		          font-size: 19px !important; } }
+		        
+		 	   @media screen and (max-width: 1160px) {
+		        u + .gmail .width-full {
+		          width: 100% !important; }
+		        u + .gmail .col-one-stack {
+		          padding: 0 !important; }
+		        u + .gmail .col-two-stack {
+		          padding: 20px 0 0 0 !important; }
+		        u + .gmail .email-stars {
+		          padding: 5px 0 !important; }
+		        u + .gmail .email-title {
+		     	  font-size: 52px !important;
+		          line-height: 52px !important;
+		          padding: 2px 0 3px !important; }
+		        u + .gmail .email-slogan {
+		          font-size: 18px !important;
+		          line-height: 18px ;
+		          padding: 5px 0 !important; }
+		        u + .gmail .email-date-day {
+		          padding-top: 10px !important; }
+		        u + .gmail .email-date-month {
+		          padding-bottom: 10px !important; }
+		        u + .gmail .email-ornamentation {
+		          height: auto !important;
+		          width: 100% !important; }
+		        u + .gmail .padding-top-10 {
+		          padding-top: 10px !important; }
+		        u + .gmail .stack-column-two {
+		            padding-top: 20px !important; } }
 		</style>
+		    <!--[if gte mso 12 && lt mso 15]>
+      			<style>
+			        .email-slogan {
+			          font-size: 24px !important;
+			          line-height: 24px !important; }
+      			</style>
+    		<![endif]-->
+    		<!--[if gte mso 12]>
+      			<style>
+			        td{
+			          mso-line-height-rule: exactly; }
+			        .email-tickets {
+			          line-height: 32px !important; }
+			        .email-title {
+			          padding-bottom: 0 !important; }
+      			</style>
+    		<![endif]-->
 	</head>
 	<body class="gmail" style="margin: 0; padding: 0;">
 		<table 	border="0" 
@@ -69,7 +121,16 @@
 				style="background-color: #d2d2d2;"
 				width="100%">
 			<tr>
-				<td style="padding: 0 10px;">>
+				<td style="padding: 0 10px;">
+					<!--[if (IE)|mso]>
+            			<table 	align="center"
+                   				border="0"
+                   				cellpadding="0"
+                   				cellspacing="0"
+                   				width="600">
+              				<tr>
+                				<td>
+          			<![endif]-->
 					<table 	align="center" 
 							border="0" 
 							cellpadding="0" 
@@ -110,6 +171,20 @@
 										Zachary Stall News and Updates</td>
 						</tr>
 					</table>
+					<!--[if (IE)|mso]>
+                				</td>
+              				</tr>
+            			</table>
+          			<![endif]-->
+          			<!--[if (IE)|mso]>
+            			<table 	align="center"
+                   				border="0"
+                   				cellpadding="0"
+                   				cellspacing="0"
+                   				width="600">
+              				<tr>
+                				<td>
+          			<![endif]-->
 					<table 	class="width-full"
 							align="center" 
 							border="0" 
@@ -126,6 +201,20 @@
 									 width="600" /></td>
 						</tr>
 					</table>
+					<!--[if (IE)|mso]>
+			                </td>
+			              </tr>
+			            </table>
+			          <![endif]-->
+			          <!--[if (IE)|mso]>
+			            <table align="center"
+			                   border="0"
+			                   cellpadding="0"
+			                   cellspacing="0"
+			                   width="600">
+			              <tr>
+			                <td>
+			         <![endif]-->
 					<table 	class="width-full"
 							align="center" 
 							border="0" 
@@ -145,14 +234,15 @@
 										<tr>
 											<td>
 												<table  class="width-full"
-														bgcolor="5b3885"
+														bgcolor="#5b3885"
 														border="0"
 														cellpadding="0"
 														cellspacing="0"
 														style="	text-align: center;
 																text-transform: uppercase;
-																margin-top: 5px;"
-														width="290px">
+																margin-top: 5px;
+																"
+														width="295px">
 													<tr>
 														<td style="	font-size: 18px;
 																	line-height: 18px;">
@@ -161,20 +251,20 @@
 																	height="15" 
 																	src="https://i.imgur.com/5QqBvxp.png" 
 																	style="display: block;" 
-																	width="290"></td>
+																	width="295"></td>
 													</tr>
 													<tr>
-														<td class="	"
+														<td class="	email-date-day"
 															style="	color: #fcfbfd;
 																	font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif; 
 																	font-size: 48px;
 																	font-weight: bold; 
-																	line-height: 48px; 
+																	line-height: 58px; 
 																	padding-top: 25px;">
 																	&bull; SAT &bull;</td>
 													</tr>
 													<tr>
-														<td class="	"
+														<td class="	email-date-month"
 															style="	color: #fcfbfd;
 																	font-family: 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif;  
 																	font-size: 30px; 
@@ -191,33 +281,39 @@
 																	height="16"
 																	src="https://i.imgur.com/5QqBvxp.png"
 																	style="display: block;" 
-																	width="290" /></td>
+																	width="295" /></td>
 													</tr>
 												</table>
 											</td>
 										</tr>
 									</table>
 								</div>
+								<!--[if mso]>
+
+                  					</td>
+                  					<td>
+
+                				<![endif]-->
 								<div style="display: inline-block;">
 									<table 	class="width-full"
-											align="center"
+											align="left"
 											border="0" 
 											cellpadding="0" 
 											cellspacing="0"  
 											width="300">
 										<tr>
 											<td>
-												<table  class="width-full email-marginclr"
-														bgcolor="#0089b4"; 	
+												<table  class="width-full margin-left-clr"
+														bgcolor="#0089b4" 	
 														border="0" 
 														cellpadding="0" 
 														cellspacing="0"
 														style=" color: #fcfbfd;
 																text-align: center;
 																text-transform: uppercase;
-																margin-top: 5px;
-																margin-left: 10px;" 
-														width="290">
+																margin-left: 4px;"
+
+														width="295px">
 													<tr>
 														<td style="	font-size: 18px;
 																	line-height: 18px;">
@@ -226,21 +322,21 @@
 																	height="15" 
 																	src="https://i.imgur.com/5QqBvxp.png" 
 																	style="display: block;" 
-																	width="290"></td>
+																	width="295" /></td>
 													</tr>
 													<tr>
-														<td class=""
+														<td class="	email-tickets-title"
 															style="	color: #fcfbfd;
 																	font-family: Arial, 'Arial Black', 'GillSans-Bold', 'Arial Bold', Arial, sans-serif;
 																	font-size: 30px;
 																	font-weight: bold;
 																	line-height: 100%;
-																	padding-top: 15px;">
+																	padding-top: 10px;">
 																	Much Derp</td>
 													</tr>
 													<tr>
 														<td>
-															<table 	class=""
+															<table 	class="email-tickets-border"
 																	align="center" 
 																	border="0" 
 																	cellpadding="0" 
@@ -266,43 +362,43 @@
 														</td>
 													</tr>
 													<tr>
-														<td class= ""
+														<td class=" emai-tickets"
 															style="	color: #fcfbfd;
 																	font-family: Arial; 
 																	font-size: 14px; 
 																	font-weight: bold; 
 																	line-height: 14px; 
 																	padding-top: 5px;">
-															<span 	class=""
+															<span 	class=" email-tickets-category"
 																	style="	font-family: 'Arial Black', 'GillSans-Bold','Arial Bold', Arial, sans-serif; 
-																	font-size: 35.5px;
-																	line-height: 35.5px;">
+																	font-size: 26px;
+																	line-height: 26px;">
 																	insta</span>
-															<span 	class=""
+															<span 	class=" email-tickets-price"
 																	style="	font-family: 'Arial Black'; 
-																	font-size: 32px; 
-																	line-height: 32px;">
-																	<a href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
+																	font-size: 28px; 
+																	line-height: 28px;">
+																	<a href="https://www.instagram.com/leela_ig/" target="_blank" sytle="color: ##5b3885;">Link</a></span>
 																	fun</td>
 													</tr>
 													<tr>
-														<td class= ""
+														<td class= "email-tickets"
 															style="	color: #fcfbfd;
 																	font-family: Arial; 
 																	font-size: 14px; 
 																	font-weight: bold; 
 																	line-height: 14px; 
 																	padding-top: 5px;">
-															<span 	class=""
+															<span 	class="email-tickets-category"
 																	style="	font-family: 'Arial Black', 'GillSans-Bold','Arial Bold', Arial, sans-serif; 
-																	font-size: 35.5px;
-																	line-height: 35.5px;">
+																	font-size: 26px;
+																	line-height: 26px;">
 																	insta</span>
-															<span 	class=""
+															<span 	class="email-tickets-category"
 																	style="	font-family: 'Arial Black'; 
-																	font-size: 32px; 
-																	line-height: 32px;">
-																	<a href="https://www.instagram.com/leela_ig/" target="_blank">Link</a></span>
+																	font-size: 28px; 
+																	line-height: 28px;">
+																	<a href="https://www.instagram.com/leela_ig/" target="_blank" sytle="color: ##5b3885;">Link</a></span>
 																	fun</td>
 													</tr>
 													<tr>
@@ -312,7 +408,7 @@
 																	height="16"
 																	src="https://i.imgur.com/5QqBvxp.png" 
 																	style="	display: block;" 
-																	width="290" /></td>
+																	width="295" /></td>
 													</tr>
 												</table>
 											</td>
@@ -322,7 +418,22 @@
 							</td>
 						</tr>
 					</table>
-					<table 	class="width-full"
+					<!--[if (IE)|mso]>
+			                </td>
+			              </tr>
+			            </table>
+			        <![endif]-->
+
+			        <!--[if (IE) | mso]>
+			            <table align="center"
+			                   border="0"
+			                   cellpadding="0"
+			                   cellspacing="0"
+			                   width="600">
+			                <tr>
+			                  <td>
+			        <![endif]-->
+					<table 	class="width-full width-fixed-600"
 							align="center"
 							border="0"
 							cellpadding="0"
@@ -376,13 +487,43 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
-								<!--Line 503 in litmus.com/builder/7f28329  Need to add button -->
+							<td align="	center"
+								class=" email-phone-number"
+								sytle=" color: #ffffff;
+										font-family: Arial, sans-serif;
+										font-weight: bold;
+										padding-bottom: 30px;">
+								Feeling Buggy, Call 123-456-7891								
+							</td>
+						</tr>						
+					</table>
+					<table  class="width-full"
+							align="center"
+							border="0"
+							cellpadding="0"
+							cellspacing="0"
+							style=" color:  #5b3885;
+									font-family: Arial, sans-serif;
+									font-size: 12px;
+									max-width: 600px;"
+							width="100%">
+						<tr>
+							<td align="center">
+								Can't hang? <a href="#" sytle="color: ##5b3885;">unsubscribe</a>					
 							</td>
 						</tr>
-
-						
+						<tr>
+							<td align="center"
+								style="padding: 15px 0;">
+								Denver CO
+							</td>
+						</tr>						
 					</table>
+					<!--[if (IE) | mso]>
+                  				</td>
+                			</tr>
+              			</table>
+            		<![endif]-->
 				</td>
 			</tr>
 		</table>
